--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,8 +12,14 @@ $contact-text: #707070;
 $info-text: #A5A5A5;
 $info-shadows: #00000029;
 // Sizes
-$logo-size: 2rem;
+$logo-size: 2em;
 // media
 $mobile-nav-medium-size: 750px;
 $mobile-nav-small-size: 600px;
-$mobile-size: 1352px;
+$desktop-size: 1352px;
+// font size
+$primary-header: 3.0625em;
+$secondary-header: 2.25em;
+$paragraph-size: 1em;
+$favour-size: 1.25em;
+$price-text-size: 2.875em;
