--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -20,6 +20,8 @@ $desktop-size: 1352px;
 // font size
 $primary-header: 3.0625em;
 $secondary-header: 2.25em;
+$tertiary-header: 1.875em;
+
 $paragraph-size: 1em;
 $favour-size: 1.25em;
 $price-text-size: 2.875em;
