--- a/scss/main.scss
+++ b/scss/main.scss
@@ -411,6 +411,34 @@ p {
     h3 {
         padding-top: 5%;
         padding-bottom: 5%;
+        @media screen and (min-width: $desktop-size) {
+            padding: 0;
+            padding-bottom: 3%;
+        }
+    }
+    h4 {
+        padding: 10% 0;
+    }
+    .pricing__articles {
+        &>div:nth-child(1),
+        &>div:nth-child(2),
+        &>div:nth-child(3)
+        {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        @media screen and (min-width: $desktop-size) {
+            display: flex;
+        }
+        .pricing__features ul {
+            @media screen and (min-width: $desktop-size) {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
     }
     .pricing__article {
         border: 1px solid black;
@@ -421,8 +449,14 @@ p {
         justify-content: center;
         justify-content: space-around;
         align-items: center;
+        @media screen and (min-width: $desktop-size) {
+            flex-direction: column;
+        }
         .pricing__type {
             text-align: center;
+            @media screen and (min-width: $desktop-size) {
+                margin-bottom: 3.8125em;
+            }
         }
         .pricing__price {
             font-size: 2.875em;
@@ -433,12 +467,6 @@ p {
             font-size: 0.75em;
             font-weight: bold;
         }
-        // .pricing__check {
-        //     display: inline-block;
-            
-            
-        //     fill: $basic-primary;
-        // }
         .icon {
             display: inline-block;
             stroke-width: 2px;
@@ -464,15 +492,6 @@ p {
     .pricing__button {
         transform: translateY(-50%);
     }
-    & div:nth-child(2),
-    & div:nth-child(3),
-    & div:nth-child(4)
-     {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
 
     .pricing__article_basic {
         border-color: $basic-primary;
@@ -486,6 +505,9 @@ p {
     }
     .container_basic {
         padding: 0 7%;
+        @media screen and (min-width: $desktop-size) {
+            padding: 5% 2%;
+        }
     }
 
     .pricing__article_professional {
@@ -493,6 +515,13 @@ p {
         box-shadow: 8px 8px 41px -9px rgba(8,166,228,0.36);
         .pricing__price {
             color: $professional-secondary;
+        }
+        ul {
+            li {
+                @media screen and (min-width: $desktop-size) {
+                    padding: 0.8em;
+                }
+            }
         }
     }
     .pricing__button_professional {
@@ -513,5 +542,8 @@ p {
     }
     .container_premium {
         padding: 0 7%;
+        @media screen and (min-width: $desktop-size) {
+            padding: 5% 2%;
+        }
     }
 }
