--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,6 +16,7 @@ $logo-size: 2em;
 // media
 $mobile-nav-medium-size: 750px;
 $mobile-nav-small-size: 600px;
+$laptop-size: 1024px;
 $desktop-size: 1352px;
 // font size
 $primary-header: 3.0625em;
