--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@
   padding: 0;
   box-sizing: border-box;
   cursor: default;
-  font-family: "Raleway", sans-serif;
 }
 
 .container {
@@ -53,6 +52,10 @@ p span {
   font-size: 1.25em;
   font-weight: bold;
   color: black;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 .price {
@@ -160,7 +163,7 @@ p span {
 .popularity {
   border-bottom: 1px solid #00000029;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .popularity {
     padding-bottom: 5%;
   }
@@ -170,7 +173,7 @@ p span {
   display: flex;
   flex-direction: column;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .popularity .popularity__content {
     flex-direction: row;
     justify-content: space-evenly;
@@ -223,7 +226,7 @@ p span {
 .advantages {
   background-color: #F7F7F7;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages {
     padding-top: 5%;
   }
@@ -239,7 +242,7 @@ p span {
   border-radius: 5px;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article {
     display: flex;
     font-size: 16px;
@@ -249,7 +252,7 @@ p span {
 .advantages .advantages__article h3 {
   padding: 0.75em;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article h3 {
     text-align: left;
     padding: 0 25% 2% 5%;
@@ -259,13 +262,13 @@ p span {
 .advantages .advantages__article p {
   color: black;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article p {
     padding: 0 20% 8% 5%;
     font-size: 120%;
   }
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article .line {
     border: 2px solid black;
     width: 50%;
@@ -276,7 +279,7 @@ p span {
 .advantages .advantages__article_basic {
   position: relative;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_basic {
     flex-direction: row-reverse;
   }
@@ -287,7 +290,7 @@ p span {
 .advantages .advantages__article_basic .advantages__first {
   padding: 10%;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_basic .advantages__first {
     padding: 3%;
   }
@@ -297,7 +300,7 @@ p span {
   width: 100%;
   height: 100%;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 388px) {
   .advantages .advantages__article_basic .advantages__first .advantages_image {
     content: url(../images/Macbook2@2x.png);
     transform: translateY(5%);
@@ -315,25 +318,22 @@ p span {
   height: 60%;
   transform: translateX(150%) translateY(-15%) rotate(-45deg);
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_basic .advantages__first .advantages_figure::before {
     border-radius: 20%;
     transform: translateX(150%) translateY(-10%) rotate(-45deg);
   }
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_basic .adventages__second {
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_professional .line {
     border-color: #08A6E4;
-  }
-  .advantages .advantages__article_professional h3 {
-    padding-right: 50%;
   }
 }
 .advantages .advantages__article_professional .advantages__first {
@@ -344,7 +344,7 @@ p span {
   width: 100%;
   height: 100%;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 343px) {
   .advantages .advantages__article_professional .advantages__first .advantages_image {
     content: url(../images/iPhone2@2x.png);
   }
@@ -352,11 +352,11 @@ p span {
 .advantages .advantages__article_professional .advantages__first .advantages_figure {
   position: relative;
   margin: 0 auto;
-  transform: translateX(15%);
+  transform: translateX(5%) scale(0.85);
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_professional .advantages__first .advantages_figure {
-    transform: translateX(0);
+    transform: translateX(0%) scale(0.8);
   }
 }
 .advantages .advantages__article_professional .advantages__first .advantages_figure::before {
@@ -366,17 +366,18 @@ p span {
   content: "";
   background-color: #08A6E4;
   border-radius: 50%;
-  width: 70%;
-  padding-top: 70%;
+  width: 80%;
+  padding-top: 80%;
+  transform: translateX(-10%);
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_professional .adventages__second {
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_premium {
     border: none;
     background-color: #F7F7F7;
@@ -395,7 +396,7 @@ p span {
   border-radius: 0.3em;
   margin-top: 1em;
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_premium .adventages__second {
     margin-top: 0;
     padding-left: 15%;
@@ -405,21 +406,25 @@ p span {
   position: relative;
   width: 100%;
   height: 100%;
-  transform: translateY(20%) translateX(-10%);
+  transform: translateY(30%) translateX(-30%);
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 297px) {
   .advantages .advantages__article_premium .adventages__second .advantages_image {
     content: url(../images/Trumpet@2x.png);
-    transform: translateY(45%) translateX(-35%);
+    transform: translateY(15%) translateX(-5%);
   }
 }
-@media screen and (min-width: 1352px) {
+@media screen and (min-width: 1024px) {
+  .advantages .advantages__article_premium .adventages__second .advantages_image {
+    transform: translateY(55%) translateX(-35%);
+  }
+}
+@media screen and (min-width: 1024px) {
   .advantages .advantages__article_premium .advantages__first {
     padding: 2%;
     background-color: white;
     border: 1px solid #00000029;
     border-radius: 5px;
-    margin-right: 5%;
   }
 }
 
