--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,6 @@
     padding: 0;
     box-sizing: border-box;
     cursor: default;
-    font-family: 'Raleway', sans-serif;
 }
 
 .container {
@@ -53,6 +52,10 @@ p {
         font-weight: bold;
         color: black;
     }
+}
+
+body {
+    overflow-x: hidden;
 }
 
 .price {
@@ -144,7 +147,7 @@ p {
 }
 
 .popularity {
-    @media screen and (min-width: $desktop-size) {
+    @media screen and (min-width: $laptop-size) {
         padding-bottom: 5%;
     }
     border-bottom: 1px solid #00000029;
@@ -152,7 +155,7 @@ p {
         margin-top: 1em;
         display: flex;
         flex-direction: column;
-        @media screen and (min-width: $desktop-size) {
+        @media screen and (min-width: $laptop-size) {
             flex-direction: row;
             justify-content: space-evenly;
             padding: 0 10%;
@@ -196,7 +199,7 @@ p {
 }
 
 .advantages {
-    @media screen and (min-width: $desktop-size) {
+    @media screen and (min-width: $laptop-size) {
         padding-top: 5%;
     }
     background-color: #F7F7F7;
@@ -210,14 +213,14 @@ p {
         border: 1px solid #00000029;
         border-radius: 5px;
         margin-bottom: 30px;
-        @media screen and (min-width: $desktop-size) {
+        @media screen and (min-width: $laptop-size) {
             display: flex;
             font-size: 16px;
             padding: 2%;
         }
         h3 {
             padding: 0.75em;
-            @media screen and (min-width: $desktop-size) {
+            @media screen and (min-width: $laptop-size) {
                 text-align: left;
                 padding: 0 25% 2% 5%;
                 font-size: 270%;
@@ -225,13 +228,13 @@ p {
         }
         p {
             color: black;
-            @media screen and (min-width: $desktop-size) {
+            @media screen and (min-width: $laptop-size) {
                 padding: 0 20% 8% 5%;
                 font-size: 120%;
             }
         }
         .line {
-            @media screen and (min-width: $desktop-size) {
+            @media screen and (min-width: $laptop-size) {
                 border: 2px solid black;
                 width: 50%;
                 border-radius: 2em;
@@ -243,7 +246,7 @@ p {
     .advantages__article_basic {
         position: relative;
         
-        @media screen and (min-width: $desktop-size) {
+        @media screen and (min-width: $laptop-size) {
             flex-direction: row-reverse;
             .line {
                 border-color: $basic-primary;
@@ -251,11 +254,11 @@ p {
         }
         .advantages__first {
             padding: 10%;
-            @media screen and (min-width: $desktop-size) {
+            @media screen and (min-width: $laptop-size) {
                 padding: 3%;
             }
             .advantages_image {
-                @media screen and (min-width: $desktop-size) {
+                @media screen and (min-width: 388px) {
                     content: url(../images/Macbook2@2x.png);
                     transform: translateY(5%);
                 }
@@ -276,7 +279,7 @@ p {
                 width: 40%;
                 height: 60%;
                 transform: translateX(150%) translateY(-15%) rotate(-45deg);
-                @media screen and (min-width: $desktop-size) {
+                @media screen and (min-width: $laptop-size) {
                     border-radius: 20%;
                     transform: translateX(150%) translateY(-10%) rotate(-45deg);
                 }
@@ -286,7 +289,7 @@ p {
         }
 
         .adventages__second {
-            @media screen and (min-width: $desktop-size) {
+            @media screen and (min-width: $laptop-size) {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -295,18 +298,15 @@ p {
     }
 
     .advantages__article_professional {
-        @media screen and (min-width: $desktop-size) {
+        @media screen and (min-width: $laptop-size) {
             .line {
                 border-color: $professional-secondary;
-            }
-            h3 {
-                padding-right: 50%;
             }
         }
         .advantages__first {
             padding: 2em;
             .advantages_image {
-                @media screen and (min-width: $desktop-size) {
+                @media screen and (min-width: 343px) {
                     content: url(../images/iPhone2@2x.png);
                 }
                 position: relative;
@@ -317,9 +317,9 @@ p {
             .advantages_figure {
                 position: relative;
                 margin: 0 auto;
-                transform: translateX(15%);
-                @media screen and (min-width: $desktop-size) {
-                    transform: translateX(0);
+                transform: translateX(5%) scale(0.85);
+                @media screen and (min-width: $laptop-size) {
+                    transform: translateX(0%) scale(0.8);
                 }
             }
 
@@ -330,13 +330,14 @@ p {
                 content: "";
                 background-color: $professional-secondary;
                 border-radius: 50%;
-                width: 70%;
-                padding-top: 70%;
+                width: 80%;
+                padding-top: 80%;
+                transform: translateX(-10%);
             }
         }
 
         .adventages__second {
-            @media screen and (min-width: $desktop-size) {
+            @media screen and (min-width: $laptop-size) {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -345,7 +346,7 @@ p {
     }
 
     .advantages__article_premium {
-        @media screen and (min-width: $desktop-size) {
+        @media screen and (min-width: $laptop-size) {
             border: none;
             background-color: #F7F7F7;
             padding: 0%;
@@ -363,7 +364,7 @@ p {
             background-color: $premium-primary;
             border-radius: 0.3em;
             margin-top: 1em;
-            @media screen and (min-width: $desktop-size) {
+            @media screen and (min-width: $laptop-size) {
                 margin-top: 0;
                 padding-left: 15%;
             }
@@ -371,21 +372,24 @@ p {
                 position: relative;
                 width: 100%;
                 height: 100%;
-                transform: translateY(20%) translateX(-10%);
-                @media screen and (min-width: $desktop-size) {
+                transform: translateY(30%) translateX(-30%);
+                @media screen and (min-width: 297px) {
                     content: url(../images/Trumpet@2x.png);
-                    transform: translateY(45%) translateX(-35%);
+                    transform: translateY(15%) translateX(-5%);
+                }
+                @media screen and (min-width: $laptop-size) {
+                    transform: translateY(55%) translateX(-35%);
                 }
             }
         }
 
         .advantages__first {
-            @media screen and (min-width: $desktop-size) {
+            @media screen and (min-width: $laptop-size) {
                 padding: 2%;
                 background-color: white;
                 border: 1px solid #00000029;
                 border-radius: 5px;
-                margin-right: 5%;
+                // margin-right: 5%;
             }
         }
     }
